fixes for the menu on mobile

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -104,7 +104,11 @@ input {
 }
 #menu .pannel--header {
 	padding: 16px 16px 32px;
+	text-decoration: none;
 	/* border-bottom: 0.5px solid #C7C7CC; */
+}
+#menu .pannel--header {
+	color: inherit
 }
 #menu h1 {
 	box-shadow: 0 -4px 0 0 #2BE4A4 inset;
